--- a/app/src/main/res/layout/item_article.xml
+++ b/app/src/main/res/layout/item_article.xml
@@ -18,5 +18,10 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:contentDescription="tvArticleTitle" />
+
+        <ImageView
+            android:id="@+id/tvArticleImage"
+            android:layout_width="wrap_content"
+            android:layout_height="200dp" />
     </com.google.android.material.card.MaterialCardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
