--- a/app/src/main/res/layout/item_article.xml
+++ b/app/src/main/res/layout/item_article.xml
@@ -13,15 +13,23 @@
         app:layout_constraintStart_toStartOf="parent"
         android:layout_margin="8dp">
 
-        <TextView
-            android:id="@+id/tvArticleTitle"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:contentDescription="tvArticleTitle" />
-
-        <ImageView
-            android:id="@+id/tvArticleImage"
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="200dp" />
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/tvArticleImage"
+                android:layout_width="match_parent"
+                android:layout_height="200dp" />
+
+            <TextView
+                android:id="@+id/tvArticleTitle"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:contentDescription="tvArticleTitle"
+                android:fontFamily="sans-serif-medium"
+                android:textAlignment="center" />
+        </LinearLayout>
     </com.google.android.material.card.MaterialCardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
